--- a/repro.csproj
+++ b/repro.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CouchbaseNetClient" Version="3.0.7"/>
+    <PackageReference Include="CouchbaseNetClient" Version="3.1.4"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0"/>
+    <PackageReference Include="DnsClient" Version="1.3.2"/>
   </ItemGroup>
 </Project>
