--- a/k8s/kind-config.yaml
+++ b/k8s/kind-config.yaml
@@ -8,8 +8,14 @@ apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   # WARNING: It is _strongly_ recommended that you keep this the default
   # (127.0.0.1) for security reasons. However it is possible to change this.
-  apiServerAddress: "0.0.0.0"
+  apiServerAddress: "127.0.0.1"
   # By default the API server listens on a random open port.
   # You may choose a specific port but probably don't need to in most cases.
   # Using a random port makes it easier to spin up multiple clusters.
   #apiServerPort: 6443
+# ensure kind v0.18.0 go1.20.2 darwin/amd64 for the following
+nodes:
+- role: control-plane
+  image: kindest/node:v1.25.8@sha256:00d3f5314cc35327706776e95b2f8e504198ce59ac545d0200a89e69fce10b7f
+- role: worker
+  image: kindest/node:v1.25.8@sha256:00d3f5314cc35327706776e95b2f8e504198ce59ac545d0200a89e69fce10b7f
