Updated with more configuration changes.
Note that this includes some TLS, but it is not working with this
commit as the CRD needs updating, coming in the next commit.

--- a/k8s/kube-deployment/cb-cluster-buckets-users.yaml
+++ b/k8s/kube-deployment/cb-cluster-buckets-users.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cb-appdemo
 spec:
   image: ghcr.io/cb-rhcc/server:7.2.0-5298
-  cluster: 
+  cluster:
     autoCompaction:
       databaseFragmentationThreshold:
         percent: 99
@@ -26,9 +26,11 @@ spec:
     endpointProxy:
       enabled: True
       image: ghcr.io/cb-rhcc/cloud-native-gateway:latest
+      tls:
+        serverSecretName: couchbase-server-tls
     tls:
       rootCAs:
-      - couchbase-server-ca
+        - couchbase-server-ca
       secretSource:
         serverSecretName: couchbase-server-tls
   #   exposeAdminConsole: true
@@ -51,7 +53,7 @@ spec:
         - search
       pod:
         spec:
-            imagePullSecrets:
+          imagePullSecrets:
             - name: ghcr-login-secret
 ---
 apiVersion: couchbase.com/v2
