--- a/k8s/kube-deployment/cb-cluster-buckets-users.yaml
+++ b/k8s/kube-deployment/cb-cluster-buckets-users.yaml
@@ -3,7 +3,7 @@ kind: CouchbaseCluster
 metadata:
   name: cb-appdemo
 spec:
-  image: registry.connect.redhat.com/couchbase/server:7.2.2-1-amd64
+  image: ghcr.io/cb-vanilla/server:7.2.4-7068
   cluster:
     autoCompaction:
       databaseFragmentationThreshold:
@@ -24,8 +24,7 @@ spec:
           cluster: appdemo-cluster
   networking:
     cloudNativeGateway:
-      enabled: True
-      image: registry.connect.redhat.com/couchbase/cloud-native-gateway:0.1.0-1-amd64
+      image: ghcr.io/cb-vanilla/cloud-native-gateway:0.2.1-127
       tls:
         serverSecretName: appdemo-route
     tls:
